# agentic-renderdoc

./: .gitignore  README.md  package.py  pyproject.toml
docs/: DESIGN.md  IMPLEMENTATION.md
scripts/: install.py
src/extension/: __init__.py  api_index.py  bridge.py  extension.json  handlers.py  serialize.py  utilities.py  winsock.py
src/server/: __main__.py  app.py  client.py  tools.py
