[project]
name = "agentic-renderdoc"
version = "0.1.0"
description = "MCP server for AI-assisted graphics debugging with RenderDoc"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.26",
]

[project.scripts]
agentic-renderdoc = "server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
