[project]
name = "agentic-renderdoc"
version = "1.0.0"
description = "MCP server for AI-assisted graphics debugging with RenderDoc"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Eden Labs"},
]
keywords = ["renderdoc", "mcp", "gpu", "graphics-debugging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp[cli]>=1.26",
    "Pillow>=10.0",
]

[project.urls]
Repository = "https://github.com/EdenLabs/agentic-renderdoc"

[project.scripts]
agentic-renderdoc = "server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
